[package]
name = "filesystem-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
chrono = "0.4.42"
clap = { version = "4.5.54", features = ["derive"] }
futures = "0.3.31"
globset = "0.4.18"
ignore = "0.4.25"
rmcp = { version = "0.12.0", features = ["transport-io", "uuid", "transport-streamable-http-server"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = "1.19.0"


[dev-dependencies]
tokio-test = "0.4.5"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
